# python-streaming

./: .env.sample  README.md  openapi_docs.json  pyproject.toml  requests.sh
python_streaming/: audio.py  audio_client.py  chat_client.py  chatting_service.py  config.py  index.html  reactive_client.py  streamlit_chat.py  util.py
python_streaming/fastapi_app/: app.py  dto.py  load_tests.py
python_streaming/flask_app/: app.py  load_tests.py
python_streaming/http_app/: app.py
python_streaming/websocket_app/: client.py  server.py
resources/: data.json
